[gd_scene load_steps=6 format=3 uid="uid://dd70ml3txvgnp"]

[ext_resource type="Texture2D" uid="uid://ctajtd3tm6g6n" path="res://assets/bgs/storageFront.png" id="1_5wwi2"]
[ext_resource type="Script" path="res://scripts/scenReady.gd" id="1_fup8x"]
[ext_resource type="PackedScene" uid="uid://g3ahjd2ix47l" path="res://interf/hud.tscn" id="2_03xb4"]
[ext_resource type="PackedScene" uid="uid://cxywrel1bi6i7" path="res://interacts/return_arrow.tscn" id="3_hamyp"]
[ext_resource type="Script" path="res://scripts/cscene.gd" id="4_gxctc"]

[node name="storageFront" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_fup8x")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -110.0
offset_right = 140.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_5wwi2")

[node name="cam" type="Camera2D" parent="."]
zoom = Vector2(3.6, 3.6)

[node name="hud" parent="." instance=ExtResource("2_03xb4")]
position = Vector2(0, 80)

[node name="returnArrow" parent="." instance=ExtResource("3_hamyp")]
position = Vector2(-126, 7)
destiny = "storage"

[node name="door_storage" type="Area2D" parent="."]
script = ExtResource("4_gxctc")
destiny = "hall"

[node name="collision" type="CollisionPolygon2D" parent="door_storage"]
polygon = PackedVector2Array(-18, -14, 18, -14, 18, 38, -18, 38)

[connection signal="input_event" from="door_storage" to="door_storage" method="_on_input_event"]
[connection signal="mouse_entered" from="door_storage" to="door_storage" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="door_storage" to="door_storage" method="_on_mouse_exited"]
